--- a/Q1/Makefile
+++ b/Q1/Makefile
@@ -1,7 +1,9 @@
 compile1:
 # 	Compile your code for first part here
+	nasm -f bin booter_2019459.asm -o booter.bin
 
 run1: compile1
+	qemu-system-x86_64 -fda booter.bin
 # 	 Execute part 1 here
 
 compile2:
@@ -10,3 +12,5 @@ compile2:
 run2: compile2
 #	Execute part 2 here
 
+clear:
+	rm booter.bin
